# AROS

./: .astyle  .codacy.yml  .cvsignore  .gdbinit  .gitattributes  .gitignore  .gitmodules  ACKNOWLEDGEMENTS  AFD-COPYRIGHT  CONTRIBUTING.md  Dockerfile  Dockerfile.x86_64  LEGAL  LICENSE  LICENSE.Author  Makefile.in  README.CVS  README.arosfa  README.compat  README.contents  README.developer  README.jobserv  README.md  README.mp  README.new.ppc  README.porting  README.txt  SConstruct  _gdbinit  acinclude.m4  aclocal.m4  arosfa.faq  arosshell  arosshell.c  autogen.sh  azure-pipelines.yml  configure  configure.in  contents  contents.xml  (+44 more)
arch/all-pc/boot/grub2-aros/: BUGS  ChangeLog  ChangeLog-2015  INSTALL  Makefile.am  Makefile.in  Makefile.util.am  Makefile.util.def  Makefile.utilgcry.def  NEWS  acinclude.m4  aclocal.m4  autogen.sh  config-util.h.in  config.h  config.h.in  configure  configure.ac  coreboot.cfg  geninit.sh  gentpl.py  grub-2.02-aros.diff  grub-2.04-aros.diff  grub-2.06-aros.diff  grub-2.12-aros.diff  linguas.sh  mmakefile.src
arch/all-pc/udis86/: CMakeLists.txt  README.md  mmakefile.src  udis86.h
arch/all-pc/udis86/libudis86/: CMakeLists.txt  decode.c  decode.h  extern.h  syn-att.c  syn-intel.c  syn.c  syn.h  types.h  udis86.c
arch/all-pc/udis86/scripts/: ud_itab.py  ud_opcode.py
arch/all-pc/udis86/udcli/: CMakeLists.txt  mmakefile.src  udcli.c
arch/common/boot/grub2/: ChangeLog  DISTLIST  INSTALL  Makefile.in  NEWS  THANKS  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  gencmdlist.sh  gendistlist.sh  genfslist.sh  genhandlerlist.sh  genkernsyms.sh.in  genmk.rb  genmoddep.awk  genmodsrc.sh  genpartmaplist.sh  genparttoollist.sh  gensymlist.sh.in  grub2-aros.diff  mmakefile.src
arch/common/grub2/: .cvsignore  ChangeLog  DISTLIST  INSTALL  Makefile.in  NEWS  README  THANKS  TODO  aclocal.m4  config.h.in  configure  configure.ac  gencmdlist.sh  gendistlist.sh  genfslist.sh  geninit.sh  geninitheader.sh  genkernsyms.sh  genmk.rb  genmodsrc.sh  gensymlist.sh  mmakefile.src
arch/common/grub2/autom4te.cache/: output.0  requests  traces.0
arch/common/grub2/bus/: pci.c
arch/common/grub2/commands/: blocklist.c  boot.c  cat.c  cmp.c  configfile.c  default.c  echo.c  help.c  ls.c  search.c  sleep.c  terminal.c  test.c  timeout.c  videotest.c
arch/common/grub2/conf/: common.mk  common.rmk  i386-efi.mk  i386-efi.rmk  i386-linuxbios.mk  i386-linuxbios.rmk  i386-pc.mk  i386-pc.rmk  powerpc-ieee1275.mk  powerpc-ieee1275.rmk  sparc64-ieee1275.mk  sparc64-ieee1275.rmk
arch/common/grub2/disk/: ata.c  loopback.c  lvm.c  memdisk.c  raid.c
arch/common/grub2/docs/: grub.texi
arch/common/grub2/font/: manager.c
arch/common/grub2/fs/: affs.c  cpio.c  ext2.c  fat.c  fshelp.c  hfs.c  hfsplus.c  iso9660.c  jfs.c  sfs.c  (+5 more)
tools/ADFlib/: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  adflib.pc.in  autogen.sh  configure.ac  mmakefile.src
tools/ADFlib/doc/: API.txt  Makefile.am  api_device.html  api_dir.html  api_env.html  api_file.html  api_index.html  api_native.html  api_salv.html  api_volume.html  version0.7.9d_gary.txt
tools/ADFlib/examples/: .gitignore  Makefile.am  patch_unadf_2010_0209_Galt_Barber  unadf.c  unadf.output  unadf.usage
tools/ADFlib/src/: Makefile.am  adf_disk.c  adf_env.c  adf_hd.c  adf_link.c  defendian.h  prefix.h
tools/MetaMake/: .cvsignore  AUTHORS  ChangeLog  DemoMMFile  INSTALL  Makefile.am  Makefile.amiga  Makefile.in  NEWS  README  README.GeekGadgets  TODO  acconfig.h  aclocal.m4  cache.c  cache.h  cache_inspect.py  compiler.h  config.guess  config.h.amiga  config.h.bot  config.h.in  config.h.top  config.sub  configure  configure.in  dep.c  dep.h  dirnode.c  dirnode.h  dist.src  io.c  io.h  list.c  list.h  mem.c  mem.h  mkinstalldirs  mmake.c  mmake.config.sample  (+8 more)
tools/cxref/: .cvsignore  ANNOUNCE  ChangeLog  FAQ  FAQ-html.pl  FAQ.html  INSTALL  LSM  Makefile.in  NEWS  README  README.c  README.c.html  README.c.rtf  README.c.sgml  README.c.src.html  README.html  README.man  README.sgml  README.tex  README_c.tex  TODO  acconfig.h  autoconfig.h.in  comment.c  configure  configure.in  cxref-cc  cxref.c  cxref.h  datatype.h  file.c  func.c  html.c  install-sh  latex.c  memory.c  memory.h  parse-lex.c  parse-yacc.c  (+12 more)
tools/cxref/contrib/: README  README.xrgr  cflow.el  cxref-1.5c-webcpp.patch  cxref.el  cxref.spec  cxref_includes  cxref_includes.pl  daVinvi_function.pl  daVinvi_include.pl  fixheader  fixheader.pl  includes2cxref.pl  knr2ansi.pl  make_depend.pl  tree.pl  xrefgraph.py  xrgr.pl
tools/cxref/cpp/: .cvsignore  ChangeLog  Makefile.in  README  README.man  autoconfig.h.in  cccp.c  cccp.c.diff  cexp.c  config.h  configure  configure.in  cxref-cpp-configure.in  cxref-cpp-configure.man  cxref-cpp.man  tm.h  version.c
tools/cxref/doc/: ChangeLog  Makefile.in  README  fonts.style  page.style
tools/cxref/query/: .cvsignore  ChangeLog  Makefile.in  README  README.man  input.c  output.c  query.c  query.h
tools/fd2inline/: Makefile  Makefile.cross.in  Makefile.in  Product-Info  README.os-include  README.os-lib  configure  configure.in  fd2inline.c  fd2inline.texi  install.sh  makemacros.awk  makepragmas.awk
tools/fd2inline/lib/: Makefile.in  splitasm.awk
tools/fd2inline/manifests/: bin  src
tools/fd2inline/patches/: amigaguide_lib.fd.diff  commodities_lib.fd.diff  commodities_protos.h.diff  timer.h.diff
tools/sfdc/: CLib.pl  COPYING  Dump.pl  FD.pl  FuncTable.pl  Gate.pl  Gate68k.pl  GateAOS4.pl  GateAROS.pl  GateAmithlon.pl  GateMOS.pl  LEGAL  LVO.pl  Macro.pl  Macro68k.pl  MacroAOS4.pl  MacroAROS.pl  MacroLP.pl  MacroMOS.pl  Makefile  Makefile.in  Proto.pl  SASPragmas.pl  SDI.pl  SDIAROS.pl  SFDCompile.pod  Stub.pl  Stub68k.pl  StubAROS.pl  StubAmithlon.pl  StubMOS.pl  Verify.pl  configure  configure.in  gg-sfdc.spec  gg-sfdc.spec.in  main.pl  sfdc.readme  sfdc.readme.in
workbench/devs/AHI/: AHI-Startup  COPYING.DRIVERS  ChangeLog  Makefile.in  README  README.ATO  README.TRANSLATIONS  README.md  TODO  acconfig.h  config.guess  config.h.in  config.sub  configure  configure.in  mmakefile.src  version.date
(+31087 files in other folders)
